<resources>
    <string name="app_name">ProteKu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="desc_date">Date</string>
    <string name="greet_halo">Halo,</string>
    <string name="greet_name">Name!</string>
    <string name="desc_sos_1">Apakah kamu dalam bahaya?</string>
    <string name="desc_sos2">Tekan tombol selama 3 detik</string>
    <string name="desc_sos3">untuk menyalakan alarm</string>
    <string name="_110">110</string>
    <string name="fake">Fake</string>
    <string name="emergency_call">Emergency Call</string>
    <string name="fake_call">Fake Call</string>
    <string name="report_form">Report Form</string>
    <string name="artikel">Artikel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="riwayat_laporan">Riwayat Laporan</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sos_button">sos button</string>
    <string name="logo">logo</string>
    <string name="tagline">tagline</string>
    <string name="title">title</string>
    <string name="about">about</string>
    <string name="proteku">ProtekU</string>
    <string name="be_brave">Be Brave!</string>
    <string name="desc_abt">Pelecehan seksual merupakan kekerasan yang tidak dapat dihindari. Tak jarang banyak korban yang tidak dapat melawan atau meminta bantuan saat mengalami kondisi tersebut. ProtekU yang berarti lindungi dan Be Brave yang berarti berani. Aplikasi ini dirancang guna membantu para korban saat terpojok oleh pelaku kekerasan seksual. Dilengkapi dengan fitur utama yaitu alarm yang akan memberikan suara keras ketika ditekan serta fitur lainnya berupa emergency call, fake call, dan pelaporan. Melalui aplikasi ini diharapkan dapat membantu mengurangi aksi pelecehan maupun kekerasan seksual di publik</string>
    <string name="tentang_proteku">Tentang ProtekU</string>
    <string name="tim_proteku">Tim ProteKU</string>
    <string name="abt_tim">Aditya Yudha Pratama - Mobile Development - Universitas Maritim Raja Ali Haji | Marcella Cinninthya Putri - Cloud Computing - Universitas Indonesia | Naura Assyifa - Cloud Computing - Universitas Indonesia | Rana Khalishah - Mobile Development - Universitas Gajah Mada | Ryan Aditya Adhi - Machine Learning - Universitas Sebelas Maret | Syauqi Muhammad Abrar - Machine Learning - UIN Sunan Kalijaga</string>
    <string name="gambar_tim">gambar tim</string>
    <string name="kontak_kami">Kontak Kami</string>
    <string name="proteku_bebrave">proteku.bebrave</string>
    <string name="logo_gmail">logo gmail</string>
    <string name="email">proteku.bebrave@gmail.com</string>
    <string name="kirim">Kirim</string>
    <string name="simpan">Simpan</string>
    <string name="form_pelaporan">Form Pelaporan</string>
    <string name="nama_pelapor">Nama Pelapor</string>
    <string name="lokasi_kejadian">Lokasi Kejadian</string>
    <string name="lokasi_kejadian_tv">Lokasi Kejadian:</string>
    <string name="tulis_lokasi_kejadian">Tulis lokasi kejadian</string>
    <string name="desc_kronologi">Tuliskan kronologi kejadian yang kamu alami</string>
    <string name="kronologi">Kronologi:</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="edit">edit</string>
    <string name="fill_report_profile">Kasus Pelecehan Seksual - Verbal (13.31, Stasiun Manggarai) - Status: Selesai</string>
    <string name="riwayat_laporan_profile">Riwayat Laporan</string>
    <string name="date_profile">1. 05/05/2022</string>
    <string name="notlp_profile">08123456789</string>
    <string name="kontak_darurat">Kontak Darurat</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="gender">Gender</string>
    <string name="tlpfill_profile">08123456789</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="_05_05_2022">05/05/2022</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="user_email_com">user@email.com</string>
    <string name="nama_profile">Nama Profile</string>
    <string name="oops_maaf">Oops, Maaf!</string>
    <string name="desc_under">Fitur ini sedang dalam tahap pengembangan</string>
    <string name="description_report">gini jadi tuh yakan ngertikan gue abis itu setelah itu eh malah, gini jadi tuh yakan ngertikan gue abis itu setelah itu eh....</string>
    <string name="datetime_report">16 Maret 2022</string>
    <string name="location_report">Jakarta</string>
</resources>